@@ -1,3 +1,7 @@
+2021-08-18  Danilo Chang
+
+	* Add tests folder via basic test cases
+
 2021-08-14  Danilo Chang
 
 	* Bump version to v0.5
